Feat/global search (#7)
